--- a/scc2425-tukano/src/main/test/artillery/first_users_post.yaml
+++ b/scc2425-tukano/src/main/test/artillery/first_users_post.yaml
@@ -1,11 +1,12 @@
 config:
     target: http://127.0.0.1:8080/tukano/rest
+    processor: ./usersTest.js
     phases:
         - name: simple_post
-          duration: 9
+          duration: 3
           arrivalRate: 1
     payload:
-        path: ./data/users.csv
+        path: ../data/users.csv
         order: sequence # selects users sequentially, default is random
         #loadAll: true # load the whole CSV
         skipHeader: true # The first line is a header, so we want to skip it
@@ -28,3 +29,16 @@ scenarios:
                     pwd: "{{ pwd }}"
                     email: "{{ email }}"
                     displayName: "{{ displayName }}"
+          - put:
+                url: /users/
+                headers:
+                  Content-Type: application/json
+                  Accept: application/json
+                beforeRequest: "updateUser"
+          - get:
+              url: /users/?query=
+              headers:
+                accept: application/json
+          - delete:
+              url: /users/jdoe?pwd=password123
+
