--- a/scc2425-tukano/pom.xml
+++ b/scc2425-tukano/pom.xml
@@ -119,13 +119,6 @@
 			<version>5.0.1</version>
 		</dependency>
 
-
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.7.4</version> <!-- Use the latest version available -->
-		</dependency>
-
 		<!-- Rest of dependencies -->
 
 
@@ -228,6 +221,16 @@
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
 			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version> <!-- or the latest version -->
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.4</version>
 		</dependency>
 	</dependencies>
 </project>
