--- a/scc2425-tukano/azurekeys-northeurope.props
+++ b/scc2425-tukano/azurekeys-northeurope.props
@@ -1,5 +1,7 @@
-# Date : 11/5/24, 8:05 PM
-BlobStoreConnection=DefaultEndpointsProtocol=https;AccountName=sto60019northeurope;AccountKey=ikPyljeWHoboS/F1tYE/PeiWaqAmdfIHIlRb0NvQ/CHLAcTeUuMAZfHcJA+6fdNb4uMIydgXuTyz+AStc2dEsQ==;EndpointSuffix=core.windows.net
-COSMOSDB_KEY=b44mpQ6kfr6co5QIVWvLebIkc2LjJDGKlEmLnqSMKq8SMC1LCn3l01aKOV67p8T9O3eaylRFU0JwACDbSAakYg==
+# Date : 11/7/24, 4:23 PM
+REDIS_KEY=Rij5s5vXGLCuXX6V4pdArQdXBw9Pz6OQGAzCaFCVg8w=
+REDIS_URL=redis60019northeurope.redis.cache.windows.net
+BlobStoreConnection=DefaultEndpointsProtocol=https;AccountName=sto60019northeurope;AccountKey=A6A5VpnMLIpsgKmk0r4x7CdmFyJFh6UpBucBr1/AF5ZDQb2ympyrKw2Ycodf+Apz13mu7aN+HveF+AStWXf5/Q==;EndpointSuffix=core.windows.net
+COSMOSDB_KEY=UxOzFdRhP967DVajvb1skwRUeCHjsPqPcVBa5tzkfNmTyfhtNp1U5Uw782duFnthExgZvAEtWy95ACDbW6zNtQ==
 COSMOSDB_URL=https://cosmos60019.documents.azure.com:443/
 COSMOSDB_DATABASE=cosmosdb60019
