--- a/scc2425-tukano/test/artilleryUsersTests/first_users_post.yaml
+++ b/scc2425-tukano/test/artilleryUsersTests/first_users_post.yaml
@@ -4,7 +4,7 @@
 # http.codes.409 - 10
 
 config:
-  target: "http://127.0.0.1:8080/tukano/rest"
+  target: "http://74.178.105.228/tukano-1/rest"
   phases:
     - duration: 40
       arrivalRate: 1
