--- a/scc2425-tukano/k8s/azure-store.yaml
+++ b/scc2425-tukano/k8s/azure-store.yaml
@@ -22,7 +22,7 @@ spec:
         - containerPort: 5432
           name: postgres
         env:
-        - name: POSTGRES_USERNAME
+        - name: POSTGRES_USER
           value: "username"
         - name: POSTGRES_PASSWORD
           value: "password"
