--- a/scc2425-tukano/yamlTests/users/delete_all_users.yaml
+++ b/scc2425-tukano/yamlTests/users/delete_all_users.yaml
@@ -1,11 +1,11 @@
 config:
-    target: https://scc-tukano-60019-backend.azurewebsites.net/rest
+    target: http://48.209.166.198/tukano-1/rest
     phases:
         - name: delete_all_users
           duration: 30
           arrivalRate: 1
     payload:
-        path: ./data/users.csv
+        path: ../data/users.csv
         order: sequence # selects users sequentially, default is random
         skipHeader: true # Skip header row
         delimiter: "," # standard delimiter
